# Dynamic_Pricing_Intelligence_Platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  EXECUTIVE_PRESENTATION.md  README.md  REFINED_SYSTEM_DOCUMENTATION.md  SCRAPER_OPTIMIZATIONS.md  SYSTEM_DOCUMENTATION.md  ddg.html  debug_bestbuy.py  docker-compose.yml  dynamic_pricing.db  models.txt  pyproject.toml  requirements.txt  run.py  save_logo.py  temp_scrape_check.py  test_bestbuy.py  test_bestbuy_scraper.py  test_db_connection.py  test_endpoints.py  test_imports.py  test_scrape.py  test_scraper_latency.py  test_services.py
api_gateway/: README.md  __init__.py  db.py  logging_config.py  main.py  metrics.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
genai-service/: README.md
genai-service/genai_service/: __init__.py  recommender.py
ml-service/ml_service/: __init__.py  analyser.py  demand.py
scraping-service/scraping_service/: __init__.py  circuit_breaker.py  debug.py  normaliser.py  orchestrator.py  proxies.py  user_agents.py
scraping-service/scraping_service/scrapers/: __init__.py  amazon.py  bestbuy.py  croma.py  ebay.py  flipkart.py  flipkart_new.py  headers.py  match.py  playwright_utils.py  target.py  tatacliq.py  walmart.py
scripts/: create_user.sql  init-postgres.sql  mysql_setup.sql
vision-service/: README.md
vision-service/vision_service/: __init__.py  app.py  cache.py  prompt.py
