[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synycs-dynamic-pricing"
version = "2.0.0"
description = "AI-powered dynamic pricing intelligence platform"
authors = [
    {name = "Synycs Team"}
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.17",
    "sse-starlette==2.1.3",
    "google-generativeai==0.8.3",
    "httpx[http2]==0.28.1",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "fake-useragent==1.5.1",
    "playwright==1.49.1",
    "playwright-stealth==2.0.3",
    "numpy==2.2.1",
    "pandas==2.2.3",
    "scikit-learn==1.6.0",
    "redis==5.2.1",
    "aiomysql==0.2.0",
    "asyncpg==0.30.0",
    "Pillow==11.0.0",
    "python-magic==0.4.27",
    "prometheus-client==0.21.1",
    "python-json-logger==3.2.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.6.1",
    "pydantic-core==2.41.5",
    "python-dotenv==1.0.1",
    "rapidfuzz~=3.14.0"
]

[project.packages]
api_gateway = { include = "api_gateway" }
genai_service = { include = "genai_service" }
ml_service = { include = "ml_service" }
scraping_service = { include = "scraping_service" }
vision_service = { include = "vision_service" }

[tool.setuptools.packages.find]
where = ["."]
include = ["api_gateway", "genai_service", "ml_service", "scraping_service", "vision_service"]

[tool.pyright]
include = ["api_gateway", "genai-service", "ml-service", "scraping-service", "vision-service"]
extraPaths = ["api_gateway", "genai-service", "ml-service", "scraping-service", "vision-service"]
pythonPath = "./venv/Scripts/python.exe"